--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "h34/auth",
+    "name": "h34/auth-laravel",
     "type": "library",
     "require": {
         "php": ">=8.1",
@@ -9,6 +9,13 @@
     "autoload": {
         "psr-4": {
             "H34\\Core\\": "src/"
+        }
+    },
+    "extra": {
+        "laravel": {
+            "providers": [
+                "H34\\Auth\\AuthServiceProvider"
+            ]
         }
     },
     "authors": [
