--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
     "license": "MIT",
     "autoload": {
         "psr-4": {
-            "H34\\Core\\": "src/"
+            "H34\\Auth\\": "src/"
         }
     },
     "extra": {
