--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,9 @@
     "type": "library",
     "require": {
         "php": ">=8.1",
-        "illuminate/support": "9.*.*"
+        "illuminate/support": "9.*.*",
+        "php-open-source-saver/jwt-auth": "^1.4",
+        "h34/core-laravel": "dev-main"
     },
     "license": "MIT",
     "autoload": {
@@ -24,5 +26,5 @@
             "email": "haguilera@protonmail.com"
         }
     ],
-    "minimum-stability": "stable"
+    "minimum-stability": "dev"
 }
